tests/snapshots/parser_snapshot__basic.snap
---
source: tests/parser_snapshot.rs
expression: parsed
---
(
    Program {
        segments: [
            Segment {
                name: "code",
                items: [
                    Instruction(
                        Instruction {
                            mnemonic: "mov",
                            operands: [
                                Reg(
                                    "ax",
                                ),
                                Imm(
                                    Int(
                                        1,
                                    ),
                                ),
                            ],
                        },
                        Span {
                            line: 3,
                            col: 5,
                            len: 3,
                        },
                    ),
                    Instruction(
                        Instruction {
                            mnemonic: "add",
                            operands: [
                                Reg(
                                    "ax",
                                ),
                                Imm(
                                    Int(
                                        2,
                                    ),
                                ),
                            ],
                        },
                        Span {
                            line: 4,
                            col: 5,
                            len: 3,
                        },
                    ),
                    Instruction(
                        Instruction {
                            mnemonic: "sub",
                            operands: [
                                Reg(
                                    "ax",
                                ),
                                Imm(
                                    Int(
                                        1,
                                    ),
                                ),
                            ],
                        },
                        Span {
                            line: 5,
                            col: 5,
                            len: 3,
                        },
                    ),
                    Instruction(
                        Instruction {
                            mnemonic: "inc",
                            operands: [
                                Reg(
                                    "ax",
                                ),
                            ],
                        },
                        Span {
                            line: 6,
                            col: 5,
                            len: 3,
                        },
                    ),
                    Instruction(
                        Instruction {
                            mnemonic: "dec",
                            operands: [
                                Reg(
                                    "ax",
                                ),
                            ],
                        },
                        Span {
                            line: 7,
                            col: 5,
                            len: 3,
                        },
                    ),
                ],
                span: Span {
                    line: 2,
                    col: 1,
                    len: 4,
                },
            },
        ],
        entry: None,
    },
    [],
)
